@@ -1,6 +1,8 @@
+# <pre>
+# @(#)iso3166.tab	8.6
+# This file is in the public domain, so clarified as of
+# 2009-05-17 by Arthur David Olson.
 # ISO 3166 alpha-2 country codes
-#
-# @(#)iso3166.tab	8.5
 #
 # From Paul Eggert (2006-09-27):
 #
