@@ -1,5 +1,7 @@
-# @(#)northamerica	8.27
 # <pre>
+# @(#)northamerica	8.28
+# This file is in the public domain, so clarified as of
+# 2009-05-17 by Arthur David Olson.
 
 # also includes Central America and the Caribbean
 
