@@ -1,4 +1,7 @@
-# @(#)solar87	8.1
+# <pre>
+# @(#)solar87	8.2
+# This file is in the public domain, so clarified as of
+# 2009-05-17 by Arthur David Olson.
 
 # So much for footnotes about Saudi Arabia.
 # Apparent noon times below are for Riyadh; your mileage will vary.
