@@ -129,89 +129,89 @@ module TZInfo
           tz.transition 2008, 4, :o2, 1209074400
           tz.transition 2008, 8, :o1, 1219957200
           tz.transition 2009, 4, :o2, 1240524000
-          tz.transition 2009, 8, :o1, 1251406800
+          tz.transition 2009, 9, :o1, 1253826000
           tz.transition 2010, 4, :o2, 1272578400
-          tz.transition 2010, 8, :o1, 1282856400
+          tz.transition 2010, 9, :o1, 1285880400
           tz.transition 2011, 4, :o2, 1304028000
-          tz.transition 2011, 8, :o1, 1314306000
+          tz.transition 2011, 9, :o1, 1317330000
           tz.transition 2012, 4, :o2, 1335477600
-          tz.transition 2012, 8, :o1, 1346360400
+          tz.transition 2012, 9, :o1, 1348779600
           tz.transition 2013, 4, :o2, 1366927200
-          tz.transition 2013, 8, :o1, 1377810000
+          tz.transition 2013, 9, :o1, 1380229200
           tz.transition 2014, 4, :o2, 1398376800
-          tz.transition 2014, 8, :o1, 1409259600
+          tz.transition 2014, 9, :o1, 1411678800
           tz.transition 2015, 4, :o2, 1429826400
-          tz.transition 2015, 8, :o1, 1440709200
+          tz.transition 2015, 9, :o1, 1443128400
           tz.transition 2016, 4, :o2, 1461880800
-          tz.transition 2016, 8, :o1, 1472158800
+          tz.transition 2016, 9, :o1, 1475182800
           tz.transition 2017, 4, :o2, 1493330400
-          tz.transition 2017, 8, :o1, 1504213200
+          tz.transition 2017, 9, :o1, 1506632400
           tz.transition 2018, 4, :o2, 1524780000
-          tz.transition 2018, 8, :o1, 1535662800
+          tz.transition 2018, 9, :o1, 1538082000
           tz.transition 2019, 4, :o2, 1556229600
-          tz.transition 2019, 8, :o1, 1567112400
+          tz.transition 2019, 9, :o1, 1569531600
           tz.transition 2020, 4, :o2, 1587679200
-          tz.transition 2020, 8, :o1, 1598562000
+          tz.transition 2020, 9, :o1, 1600981200
           tz.transition 2021, 4, :o2, 1619733600
-          tz.transition 2021, 8, :o1, 1630011600
+          tz.transition 2021, 9, :o1, 1633035600
           tz.transition 2022, 4, :o2, 1651183200
-          tz.transition 2022, 8, :o1, 1661461200
+          tz.transition 2022, 9, :o1, 1664485200
           tz.transition 2023, 4, :o2, 1682632800
-          tz.transition 2023, 8, :o1, 1693515600
+          tz.transition 2023, 9, :o1, 1695934800
           tz.transition 2024, 4, :o2, 1714082400
-          tz.transition 2024, 8, :o1, 1724965200
+          tz.transition 2024, 9, :o1, 1727384400
           tz.transition 2025, 4, :o2, 1745532000
-          tz.transition 2025, 8, :o1, 1756414800
+          tz.transition 2025, 9, :o1, 1758834000
           tz.transition 2026, 4, :o2, 1776981600
-          tz.transition 2026, 8, :o1, 1787864400
+          tz.transition 2026, 9, :o1, 1790283600
           tz.transition 2027, 4, :o2, 1809036000
-          tz.transition 2027, 8, :o1, 1819314000
+          tz.transition 2027, 9, :o1, 1822338000
           tz.transition 2028, 4, :o2, 1840485600
-          tz.transition 2028, 8, :o1, 1851368400
+          tz.transition 2028, 9, :o1, 1853787600
           tz.transition 2029, 4, :o2, 1871935200
-          tz.transition 2029, 8, :o1, 1882818000
+          tz.transition 2029, 9, :o1, 1885237200
           tz.transition 2030, 4, :o2, 1903384800
-          tz.transition 2030, 8, :o1, 1914267600
+          tz.transition 2030, 9, :o1, 1916686800
           tz.transition 2031, 4, :o2, 1934834400
-          tz.transition 2031, 8, :o1, 1945717200
+          tz.transition 2031, 9, :o1, 1948136400
           tz.transition 2032, 4, :o2, 1966888800
-          tz.transition 2032, 8, :o1, 1977166800
+          tz.transition 2032, 9, :o1, 1980190800
           tz.transition 2033, 4, :o2, 1998338400
-          tz.transition 2033, 8, :o1, 2008616400
+          tz.transition 2033, 9, :o1, 2011640400
           tz.transition 2034, 4, :o2, 2029788000
-          tz.transition 2034, 8, :o1, 2040670800
+          tz.transition 2034, 9, :o1, 2043090000
           tz.transition 2035, 4, :o2, 2061237600
-          tz.transition 2035, 8, :o1, 2072120400
+          tz.transition 2035, 9, :o1, 2074539600
           tz.transition 2036, 4, :o2, 2092687200
-          tz.transition 2036, 8, :o1, 2103570000
+          tz.transition 2036, 9, :o1, 2105989200
           tz.transition 2037, 4, :o2, 2124136800
-          tz.transition 2037, 8, :o1, 2135019600
+          tz.transition 2037, 9, :o1, 2137438800
           tz.transition 2038, 4, :o2, 29586521, 12
-          tz.transition 2038, 8, :o1, 19725299, 8
+          tz.transition 2038, 9, :o1, 19725579, 8
           tz.transition 2039, 4, :o2, 29590889, 12
-          tz.transition 2039, 8, :o1, 19728211, 8
+          tz.transition 2039, 9, :o1, 19728491, 8
           tz.transition 2040, 4, :o2, 29595257, 12
-          tz.transition 2040, 8, :o1, 19731179, 8
+          tz.transition 2040, 9, :o1, 19731403, 8
           tz.transition 2041, 4, :o2, 29599625, 12
-          tz.transition 2041, 8, :o1, 19734091, 8
+          tz.transition 2041, 9, :o1, 19734315, 8
           tz.transition 2042, 4, :o2, 29603993, 12
-          tz.transition 2042, 8, :o1, 19737003, 8
+          tz.transition 2042, 9, :o1, 19737227, 8
           tz.transition 2043, 4, :o2, 29608361, 12
-          tz.transition 2043, 8, :o1, 19739915, 8
+          tz.transition 2043, 9, :o1, 19740139, 8
           tz.transition 2044, 4, :o2, 29612813, 12
-          tz.transition 2044, 8, :o1, 19742827, 8
+          tz.transition 2044, 9, :o1, 19743107, 8
           tz.transition 2045, 4, :o2, 29617181, 12
-          tz.transition 2045, 8, :o1, 19745795, 8
+          tz.transition 2045, 9, :o1, 19746019, 8
           tz.transition 2046, 4, :o2, 29621549, 12
-          tz.transition 2046, 8, :o1, 19748707, 8
+          tz.transition 2046, 9, :o1, 19748931, 8
           tz.transition 2047, 4, :o2, 29625917, 12
-          tz.transition 2047, 8, :o1, 19751619, 8
+          tz.transition 2047, 9, :o1, 19751843, 8
           tz.transition 2048, 4, :o2, 29630285, 12
-          tz.transition 2048, 8, :o1, 19754531, 8
+          tz.transition 2048, 9, :o1, 19754755, 8
           tz.transition 2049, 4, :o2, 29634737, 12
-          tz.transition 2049, 8, :o1, 19757443, 8
+          tz.transition 2049, 9, :o1, 19757723, 8
           tz.transition 2050, 4, :o2, 29639105, 12
-          tz.transition 2050, 8, :o1, 19760355, 8
+          tz.transition 2050, 9, :o1, 19760635, 8
         end
       end
     end
